--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %%==================================================
 
 % 双面打印
-\documentclass[doctor, openright, twoside]{sjtuthesis}
+\documentclass[degree=doctor,fontset=fandol, openright, twoside]{sjtuthesis}
 % \documentclass[bachelor, openany, oneside, submit]{sjtuthesis}
 % \documentclass[master, review]{sjtuthesis}
 % \documentclass[%
@@ -16,6 +16,31 @@
 %   review,     % 盲审论文，隐去作者姓名、学号、导师姓名、致谢、发表论文和参与的项目
 %   submit      % 定稿提交的论文，插入签名扫描版的原创性声明、授权声明 
 % ]
+\usepackage{sjtuextra}
+
+\sjtusetup{
+  titleZh={上海交通大学学位论文 \LaTeX 模板示例文档},
+  titleEn={A Sample Document for \LaTeX-basedd SJTU Thesis Template},
+  authorZh={某\quad{}某},
+  authorEn={\textsc{Mo Mo}},
+  id={0010900990},
+  advisorZh={某某教授},
+  advisorEn={Prof. \textsc{Mou Mou}},
+  % coadvisorZh={某某教授},
+  % coadvisorEn={Prof. \textsc{Mou Mou}},
+  instituteZh={某某系},
+  instituteEn={\textsc{Depart of XXX, School of XXX} \\
+    \textsc{Shanghai Jiao Tong University} \\
+    \textsc{Shanghai, P.R.China}},
+  majorZh={某某专业},
+  majorEn={A Very Important Major},
+  dateZh={2014年12月17日},
+  dateEn={Dec. 17th, 2014},
+}
+
+%% Graphic path & file extension
+\graphicspath{{fig/}{figure/}{figures/}{logo/}{logos/}{graph/}{graphs}}
+\DeclareGraphicsExtensions{.pdf,.eps,.png,.jpg,.jpeg}
 
 % 逐个导入参考文献数据库
 \addbibresource{bib/thesis.bib}
@@ -62,7 +87,7 @@
 \mainmatter % 使用阿拉伯数字对正文编号
 
 % 正文内容
-\include{tex/intro}
+% \include{tex/intro}
 \include{tex/example}
 \include{tex/faq}
 \include{tex/summary}
@@ -72,7 +97,7 @@
 % 附录内容，本科学位论文可以用翻译的文献替代。
 \include{tex/app_setup}
 \include{tex/app_eq}
-\include{tex/app_cjk}
+% \include{tex/app_cjk}
 \include{tex/app_log}
 
 \backmatter % 文后无编号部分 
