--- a/tex/id.tex
+++ b/tex/id.tex
@@ -2,26 +2,27 @@
 % !TEX program = xelatex
 % !TEX root = ../thesis.tex
 % !TEX encoding = UTF-8 Unicode
-\title{上海交通大学学位论文 \LaTeX 模板示例文档}
-\author{某\quad{}某}
-\advisor{某某教授}
+\title{SQL查询语句的自动生成技术研究}
+% \author{熊\quad{}云\quad{}翔}
+\author{熊云翔}
+\advisor{沈备军}
 % \coadvisor{某某教授}
-\defenddate{2014年12月17日}
+\defenddate{2018年12月12日}
 \school{上海交通大学}
-\institute{某某系}
-\studentnumber{0010900990}
-\major{某某专业}
+\institute{软件学院}
+\studentnumber{116037910048}
+\major{软件工程}
 \keywords{上海交大, 饮水思源, 爱国荣校}
 
-\englishtitle{A Sample Document for \LaTeX-basedd SJTU Thesis Template}
-\englishauthor{\textsc{Mo Mo}}
-\englishadvisor{Prof. \textsc{Mou Mou}}
+\englishtitle{Research on Automatic Generation Technology of SQL Query Statement}
+\englishauthor{\textsc{Xiong Yunxiang}}
+\englishadvisor{Prof. \textsc{Beijun Shen}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
 \englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Depart of XXX, School of XXX} \\
+\englishinstitute{\textsc{Software Engineering} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
-\englishmajor{A Very Important Major}
-\englishdate{Dec. 17th, 2014}
+\englishmajor{Engineering}
+\englishdate{Dec. 12th, 2018}
 \englishkeywords{SJTU, master thesis, XeTeX/LaTeX template}
 
