--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %%==================================================
 
 % 双面打印
-\documentclass[doctor, openright, twoside]{sjtuthesis}
+\documentclass[master, openright, twoside]{sjtuthesis}
 % \documentclass[bachelor, openany, oneside, submit]{sjtuthesis}
 % \documentclass[master, review]{sjtuthesis}
 % \documentclass[%
