--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -7,158 +7,208 @@
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
-\chapter{这是什么}
+% \chapter{绪论}
+% \label{chap:intro}
+
+% 这是上海交通大学(非官方)学位论文 \LaTeX 模板，当前版本是 \version 。
+
+% 最早的一版学位模板是一位热心的物理系同学制作的。
+% 那份模板参考了自动化所学位论文模板，使用了CASthesis.cls文档类，中文字符处理则采用当时最为流行的 \CJKLaTeX 方案。
+% 我根据交大研究生院对学位论文的要求
+% \footnote{\url{http://www.gs.sjtu.edu.cn/policy/fileShow.ahtml?id=130}}
+% ，结合少量个人审美喜好，完成了一份基本可用的交大 \LaTeX 学位论文模板。
+% 但是，搭建一个 \CJKLaTeX 环境并不简单，单单在Linux下配置环境和添加中文字体，就足够让新手打退堂鼓。
+% 在William Wang的建议下，我开始着手把模板向 \XeTeX 引擎移植。
+% 他完成了最初的移植，多亏了他出色的工作，后续的改善工作也得以顺利进行。
+
+% 随着我对 \LaTeX 系统认知增加，我又断断续续做了一些完善模板的工作，在原有硕士学位论文模板的基础上完成了交大学士和博士学位论文模板。
+
+% 现在，交大学位论文模板SJTUTHesis代码在github
+% \footnote{\url{https://github.com/sjtug/SJTUThesis}}
+% 上维护。
+% 你可以\href{https://github.com/sjtug/SJTUThesis/issues}{在github上开issue}
+% 、或者在\href{https://bbs.sjtu.edu.cn/bbsdoc?board=TeX_LaTeX}{水源LaTeX版}发帖来反映遇到的问题。
+
+% \section{研究背景}
+
+% \subsection{数据库管理系统及SQL查询语句}
+% \label{sec:requirements}
+
+% 要使用这个模板撰写学位论文，需要在\emph{TeX系统}、\emph{TeX技能}上有所准备。
+
+% \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
+% 	\item {\TeX}系统：所使用的{\TeX}系统要支持 \XeTeX 引擎，且带有ctex 2.x宏包，以2017年或更新版本的\emph{完整}TeXLive、MacTeX发行版为佳。
+% 	\item TeX技能：尽管提供了对模板的必要说明，但这不是一份“ \LaTeX 入门文档”。在使用前请先通读其他入门文档。
+% 	\item 针对Windows用户的额外需求：学位论文模本分别使用git和GNUMake进行版本控制和构建，建议从Cygwin\footnote{\url{http://cygwin.com}}安装这两个工具。
+% \end{itemize}
+
+% \subsection{SQL查询语句的自动生成}
+% \label{sec:thesisoption}
+
+% sjtuthesis提供了一些常用选项，在thesis.tex在导入sjtuthesis模板类时，可以组合使用。
+% 这些选项包括：
+
+% \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
+% 	\item 学位类型：bachelor(学位)、master(硕士)、doctor(博士)，是必选项。
+% 	\item 中文字体：fandol(Fandol 开源字体)、windows(Windows 系统下的中文字体)、mac(macOS 系统下的华文字体)、ubuntu(Ubuntu 系统下的文泉驿和文鼎字体)、adobe(Adobe 公司的中文字体)、founder(方正公司的中文字体)，默认根据操作系统自动配置。
+% 	\item 英文模版：使用english选项启用英文模版。
+% 	\item 盲审选项：使用review选项后，论文作者、学号、导师姓名、致谢、发表论文和参与项目将被隐去。
+% \end{itemize}
+
+% \subsection{编译模板}
+% \label{sec:process}
+
+% 模板默认使用GNUMake构建，GNUMake将调用latemk工具自动完成模板多轮编译：
+
+% \begin{lstlisting}[basicstyle=\small\ttfamily, caption={编译模板}, numbers=none]
+% make clean thesis.pdf
+% \end{lstlisting}
+
+% 若需要生成包含“原创性声明扫描件”的学位论文文档，请将扫描件保存为statement.pdf，然后调用make生成submit.pdf。
+
+% \begin{lstlisting}[basicstyle=\small\ttfamily, caption={生成用于提交的学位论文}, numbers=none]
+% make clean submit.pdf
+% \end{lstlisting}
+
+% 编译失败时，可以尝试手动逐次编译，定位故障。
+
+% \begin{lstlisting}[basicstyle=\small\ttfamily, caption={手动逐次编译}, numbers=none]
+% xelatex -no-pdf thesis
+% biber --debug thesis
+% xelatex thesis
+% xelatex thesis
+% \end{lstlisting}
+
+% \subsection{模板文件布局}
+% \label{sec:layout}
+
+% \begin{lstlisting}[basicstyle=\small\ttfamily,caption={模板文件布局},label=layout,float,numbers=none]
+% ├── LICENSE
+% ├── Makefile
+% ├── README.md
+% ├── bib
+% │   ├── chap1.bib
+% │   └── chap2.bib
+% ├── bst
+% │   └── GBT7714-2005NLang.bst
+% ├── figure
+% │   ├── chap2
+% │   │   ├── sjtulogo.eps
+% │   │   ├── sjtulogo.jpg
+% │   │   ├── sjtulogo.pdf
+% │   │   └── sjtulogo.png
+% │   └── sjtubanner.png
+% ├── sjtuthesis.cfg
+% ├── sjtuthesis.cls
+% ├── statement.pdf
+% ├── submit.pdf
+% ├── tex
+% │   ├── abstract.tex
+% │   ├── ack.tex
+% │   ├── app_cjk.tex
+% │   ├── app_eq.tex
+% │   ├── app_log.tex
+% │   ├── chapter01.tex
+% │   ├── chapter02.tex
+% │   ├── chapter03.tex
+% │   ├── conclusion.tex
+% │   ├── id.tex
+% │   ├── patents.tex
+% │   ├── projects.tex
+% │   ├── pub.tex
+% │   └── symbol.tex
+% └── thesis.tex
+% \end{lstlisting}
+
+% 本节介绍学位论文模板中木要文件和目录的功能。
+
+% \subsubsection{格式控制文件}
+% \label{sec:format}
+
+% 格式控制文件控制着论文的表现形式，包括sjtuthesis.cfg和sjtuthesis.cls。
+% 其中，“cls”控制论文主体格式，“cfg”为配置文件。
+
+% \subsubsection{主控文件thesis.tex}
+% \label{sec:thesistex}
+
+% 主控文件thesis.tex的作用就是将你分散在多个文件中的内容“整合”成一篇完整的论文。
+% 使用这个模板撰写学位论文时，你的学位论文内容和素材会被“拆散”到各个文件中：
+% 譬如各章正文、各个附录、各章参考文献等等。
+% 在thesis.tex中通过“include”命令将论文的各个部分包含进来，从而形成一篇结构完成的论文。
+% 对模板定制时引入的宏包，建议放在导言区。
+
+% \subsubsection{各章源文件tex}
+% \label{sec:thesisbody}
+
+% 这一部分是论文的主体，是以“章”为单位划分的，包括：
+
+% \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
+% 	\item 中英文摘要(abstract.tex)。前言(frontmatter)的其他部分，中英文封面、原创性声明、授权信息在sjtuthesis.cls中定义，不单独分离为tex文件。
+% 不单独弄成文件。
+% 	\item 正文(mainmatter)——学位论文正文的各章内容，源文件是chapter\emph{xxx}.tex。
+% 	\item 附录(app\emph{xx}.tex)、致谢(ack.tex)、攻读学位论文期间发表的学术论文目录(pub.tex)、个人简历(resume.tex)组成正文后的部分(backmatter)。
+% 参考文献列表由bibtex插入，不作为一个单独的文件。
+% \end{itemize}
+
+% \subsubsection{图片文件夹figure}
+% \label{sec:fig}
+
+% figure文件夹放置了需要插入文档中的图片文件(支持PNG/JPG/PDF/EPS格式的图片)，可以在按照章节划分子目录。
+% 模板文件中使用\verb|\graphicspath|命令定义了图片存储的顶层目录，在插入图片时，顶层目录名“figure”可省略。
+
+% \subsubsection{参考文献数据库bib}
+% \label{sec:bib}
+
+% 目前参考文件数据库目录只存放一个参考文件数据库thesis.bib。
+% 关于参考文献引用，可参考第\ref{chap:example}章中的例子。
+\chapter{绪论}
 \label{chap:intro}
+\section{研究背景}
+\label{intro:background}
+\subsection{数据库管理系统及SQL查询语句}
+\label{intro:dbmssql}
+自计算机普及以来，经过数十年的发展，各种系统的数据处理量不断提升。于是，数据库技术应运而生。它是一种建立在计算机存储设备上的仓库，可以将大量数据按照数据结构来组织、存储和管理。SQL（Structured Query Language，结构化查询语句）是一种数据库查询语言，用于存取、查询、更新和管理数据库系统。目前，数据库技术已经广泛的应用于商业和科研领域，通过数据库系统和SQL，用户可以方便的对大量数据进行各种操作。
 
-这是上海交通大学(非官方)学位论文 \LaTeX 模板，当前版本是 \version 。
+数据库系统DBMS最早出现在20世纪60年代，这时随着计算机的普及、数据处理量的增加，计算机系统开始越来越广泛的应用数据管理技术[1]。然而，传统的文件系统已经逐渐不足以支撑日益增长的需要，于是数据库管理系统DBMS应运而生。通过DBMS，用户可以以不同以往的方式，更统一和集中的管理数据。在数据库系统中，数据的组织，也就是所谓的数据模型是最核心的部分。更详细的说，数据模型是数据库系统中关于数据和联系的逻辑组织的形式表示。而数据库的发展，实际上可以相当程度的体现在数据库应用的数据模型的发展。从时间顺序来看，传统的数据模型包括网状模型和层次模型；接下来关系模型被提出，而且关系型数据库系统也是目前应用最广泛的商业数据库系统；之后随着面向对象思想在计算机技术相关的各大领域的提出与应用，面向对象模型数据库也开始渐渐发展起来[2]。
 
-最早的一版学位模板是一位热心的物理系同学制作的。
-那份模板参考了自动化所学位论文模板，使用了CASthesis.cls文档类，中文字符处理则采用当时最为流行的 \CJKLaTeX 方案。
-我根据交大研究生院对学位论文的要求
-\footnote{\url{http://www.gs.sjtu.edu.cn/policy/fileShow.ahtml?id=130}}
-，结合少量个人审美喜好，完成了一份基本可用的交大 \LaTeX 学位论文模板。
-但是，搭建一个 \CJKLaTeX 环境并不简单，单单在Linux下配置环境和添加中文字体，就足够让新手打退堂鼓。
-在William Wang的建议下，我开始着手把模板向 \XeTeX 引擎移植。
-他完成了最初的移植，多亏了他出色的工作，后续的改善工作也得以顺利进行。
+SQL（Structured Query Language，结构化查询语言），是一种特定目的程序语言，用于管理关系型数据库管理系统，或在关系流数据管理系统中进行流处理。和关系型数据库一样，SQL也基于关系代数和元组关系演算。SQL的分类如下：数据查询语言（DQL）、数据定义语言（DDL）、数据操纵语言（DML）、数据控制语言（DCL）。数据查询语言是SQL语言中，负责进行数据查询而不会对数据本身进行修改的语句，这是最基本的SQL语句；数据定义语言指SQL中负责数据结构定义与数据库对象定义的语言子集；数据操纵语言指SQL中对数据库其中的对象和数据运行访问工作的语言子集；数据控制语言，在SQL语言中，是一种可对数据访问权进行控制的指令，它可以控制特定用户账户对数据表、查看表、预存程序、用户自定义函数等数据库对象的控制权，也就是权限控制语句。
 
-随着我对 \LaTeX 系统认知增加，我又断断续续做了一些完善模板的工作，在原有硕士学位论文模板的基础上完成了交大学士和博士学位论文模板。
+SQL是对E．F．Codd的关系模型的第一个商业化语言实现[3]，1986年10月，美国ANSI采用SQL作为关系数据库管理系统的标准语言，后为国际标准化组织（ISO）采纳为国际标准。目前，所有主要的关系数据库管理系统支持某些形式的SQL，大部分数据库至少遵守SQL的统一标准。SQL语言相比于在关系型数据库出现之前、应用于网状数据库和层次数据库的查询语言，具有如下特点：1）一体化，SQL语句的各个组成部分集数据定义、数据操纵、数据控制、数据查询于一体，可以完成关系型数据库管理中的全部工作；2）使用方式灵活，可以直接以命令方式交互使用，也可以嵌入各种程序语言中使用；3）非过程化，只需将需求表达，不必描述操作步骤，也不需要导航式步骤，大大简化了编程者的操作步骤；4）语言简洁，在ANSI标准中只包含了94个关键词，核心功能只包含6个单词，易用性强。
 
-现在，交大学位论文模板SJTUTHesis代码在github
-\footnote{\url{https://github.com/sjtug/SJTUThesis}}
-上维护。
-你可以\href{https://github.com/sjtug/SJTUThesis/issues}{在github上开issue}
-、或者在\href{https://bbs.sjtu.edu.cn/bbsdoc?board=TeX_LaTeX}{水源LaTeX版}发帖来反映遇到的问题。
+目前，各种计算机系统，尤其是商业领域，应用关系型数据库系统和SQL语言来进行数据管理，仍然是最主流和最成熟的方案。需要注意的是，SQL作为一种数据库操作语言，本质上仍然是一种编程语言，需要操作人员具有一定的专业知识，经过数据库和SQL相关知识的培训，才能比较熟练的进行数据库的管理。此外，除了要具备SQL和数据库技术的相关知识，具体到真实数据库的操作，数据管理人员还需要对于所使用的关系型数据库的关系模式有所了解，才能将各种操作需求转化为SQL语句，来对数据库系统进行管理。然而，随着数据库系统的应用场景越发广泛和复杂，以及数据库数据处理量的不断提升，数据管理人员对数据库的操作逻辑也越来越复杂，数据库查询需求所涉及的数据量也越来越大，相关的关系模式也越来越复杂和多样化。当数据库管理需求达到这样的复杂度，非专业的数据管理人员就越来越无法满足需求。
 
-\section{使用模板}
+综上所述，一方面，随着应用于各种领域的数据库系统越来越多，尤其是在商业领域，数据管理人员的需求越来越大；另一方面，越发复杂的应用场景和日益增多的数据量，对数据管理人员的专业能力和知识也提出了越来越高的要求。在实际的应用场景中，数据管理人员很少具备这一方面的专业知识。这样一来，企业就需要雇佣数据专家，或者投入大量的培训成本对数据管理人员进行培训。然而事实上，面向商业领域的数据库管理，需求提出者和操作人员更关心的是数据本身，以及数据从业务层面考虑所具有的意义。一方面，数据管理需求更高专业性的人才，另一方面，数据管理最本质的目的在于获得数据从业务角度考虑所隐含的信息。基于这样的矛盾，一种可以在现代数据操作人员与数据库和SQL技术之间架起桥梁的工具，就显得十分必要了。因此，我们需要设计和实现一个SQL查询语句自动生成工具，为数据库使用者提供简单、便捷的接口，将数据库信息映射到业务需求，使其无需了解SQL语句的使用方式，只需关注数据操作需求对应的业务需求，也能高效率使用数据库操作数据，弥合业务人员与数据操作之间的矛盾。
 
-\subsection{准备工作}
-\label{sec:requirements}
+% 要使用这个模板撰写学位论文，需要在\emph{TeX系统}、\emph{TeX技能}上有所准备。
 
-要使用这个模板撰写学位论文，需要在\emph{TeX系统}、\emph{TeX技能}上有所准备。
+% \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
+% 	\item {\TeX}系统：所使用的{\TeX}系统要支持 \XeTeX 引擎，且带有ctex 2.x宏包，以2017年或更新版本的\emph{完整}TeXLive、MacTeX发行版为佳。
+% 	\item TeX技能：尽管提供了对模板的必要说明，但这不是一份“ \LaTeX 入门文档”。在使用前请先通读其他入门文档。
+% 	\item 针对Windows用户的额外需求：学位论文模本分别使用git和GNUMake进行版本控制和构建，建议从Cygwin\footnote{\url{http://cygwin.com}}安装这两个工具。
+% \end{itemize}
 
-\begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
-	\item {\TeX}系统：所使用的{\TeX}系统要支持 \XeTeX 引擎，且带有ctex 2.x宏包，以2017年或更新版本的\emph{完整}TeXLive、MacTeX发行版为佳。
-	\item TeX技能：尽管提供了对模板的必要说明，但这不是一份“ \LaTeX 入门文档”。在使用前请先通读其他入门文档。
-	\item 针对Windows用户的额外需求：学位论文模本分别使用git和GNUMake进行版本控制和构建，建议从Cygwin\footnote{\url{http://cygwin.com}}安装这两个工具。
-\end{itemize}
+\subsection{SQL查询语句的自动生成}
+\label{intro:sqlag}
+\subsubsection{基于人机交互的SQL查询语句自动生成}
+自然语言接口（NLI，NaturalLanguageInterfaces），是自然语言处理和人机交互的交叉领域，旨在为人类提供通过自然语言与计算机交互的手段。同时，自然语言接口也是人机交互领域研究的终极目标，从各种对话机器人，到今天各种智能穿戴设备装载的语音助手，人机交互领域和自然语言理解领域的专家们一直在朝建立真正智能的自然语言接口这个目标不断前进。
 
-\subsection{模板选项}
-\label{sec:thesisoption}
+自然语言处理，包含了许多子问题，如分词、词性标注、句法分析、文本分类、信息抽取等等，在许多领域都有着广泛的应用。自然语言的处理，一开始是基于手工查频，获得自然语言的概率模型，通过马尔科夫随机过程、有限状态机等方式，提取自然语言特征；之后，自然语言处理的语料库开始建立，出现了诸如贝叶斯方法、隐马尔科夫、支持向量机等经典算法，来进行自然语言处理；90年代以来，基于统计的自然语言处理就开始大放异彩了，补充了传统的基于规则的方法；而目前，自然语言的处理则更多的利用了深度学习，神经网络，受图像处理的启发，将自然语言转化为向量、矩阵等形式，通过不同结构的神经网络来进行处理，已经取得了非常优秀的成果，并且在未来还有巨大的进步空间，这也是目前自然语言处理领域的主流研究方向。
 
-sjtuthesis提供了一些常用选项，在thesis.tex在导入sjtuthesis模板类时，可以组合使用。
-这些选项包括：
+自然语言接口生成SQL也是人们关注的一个领域[6]，自上个世纪提出以来，人们不断研究从自然语言生成SQL语句的可能性，并且的确在研究过程中取得了一些令人振奋的成果。通过自然语言接口生成SQL的数据库管理系统，原型已经出现在六十年代和七十年代初期，那时候最著名的自然语言接口数据库是Lunar，正如其名字，包含月球岩石和化学数据库的自然语言界面。这个原型的实现，是基于特定数据库的，因此无法很容易地修改为和不同的数据库一起使用。之后出现了其他的自然语言接口数据库，用户可以通过对话系统来定制查询，并且这些系统可以配置不同的接口，供不同的底层数据库调用。这时候的自然语言数据库系统使用语义语法，是一种句法和语义处理的综合技术。之后，还有关注于将自然语言输入转化为逻辑语言的技术，以此技术作为自然语言接口数据库的核心技术。在自然语言处理领域，随着语义解析技术的发展，数据库的自然语言技术可以利用基于统计的语义解析，将自然语言和SQL结构对应起来，完成自然语言到SQL语句的转化[7]。而近期神经网络、深度学习技术的兴起，更为自然语言接口生成SQL的发展提供了新思路和新方向。目前，各种深度神经网络结构可以被应用于SQL生成问题，来尝试理解自然语言，利用深度学习的方式生成SQL语句。具体的方法有，将从自然语言到SQL语句的问题视为机器翻译问题，以从序列到序列的方式将自然语言翻译为SQL语句[5][17]；或者利用深度学习的方式优化语义解析技术，加强对自然语言结构的理解能力，等等。基于深度学习的SQL语句生成自然语言接口，所应用的技术包括词向量的训练和表达[10]、不同结构的网络模型如卷积神经网络、递归神经网络、神经语法解析器等等。
 
-\begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
-	\item 学位类型：bachelor(学位)、master(硕士)、doctor(博士)，是必选项。
-	\item 中文字体：fandol(Fandol 开源字体)、windows(Windows 系统下的中文字体)、mac(macOS 系统下的华文字体)、ubuntu(Ubuntu 系统下的文泉驿和文鼎字体)、adobe(Adobe 公司的中文字体)、founder(方正公司的中文字体)，默认根据操作系统自动配置。
-	\item 英文模版：使用english选项启用英文模版。
-	\item 盲审选项：使用review选项后，论文作者、学号、导师姓名、致谢、发表论文和参与项目将被隐去。
-\end{itemize}
 
-\subsection{编译模板}
-\label{sec:process}
-
-模板默认使用GNUMake构建，GNUMake将调用latemk工具自动完成模板多轮编译：
-
-\begin{lstlisting}[basicstyle=\small\ttfamily, caption={编译模板}, numbers=none]
-make clean thesis.pdf
-\end{lstlisting}
-
-若需要生成包含“原创性声明扫描件”的学位论文文档，请将扫描件保存为statement.pdf，然后调用make生成submit.pdf。
-
-\begin{lstlisting}[basicstyle=\small\ttfamily, caption={生成用于提交的学位论文}, numbers=none]
-make clean submit.pdf
-\end{lstlisting}
-
-编译失败时，可以尝试手动逐次编译，定位故障。
-
-\begin{lstlisting}[basicstyle=\small\ttfamily, caption={手动逐次编译}, numbers=none]
-xelatex -no-pdf thesis
-biber --debug thesis
-xelatex thesis
-xelatex thesis
-\end{lstlisting}
-
-\subsection{模板文件布局}
-\label{sec:layout}
-
-\begin{lstlisting}[basicstyle=\small\ttfamily,caption={模板文件布局},label=layout,float,numbers=none]
-├── LICENSE
-├── Makefile
-├── README.md
-├── bib
-│   ├── chap1.bib
-│   └── chap2.bib
-├── bst
-│   └── GBT7714-2005NLang.bst
-├── figure
-│   ├── chap2
-│   │   ├── sjtulogo.eps
-│   │   ├── sjtulogo.jpg
-│   │   ├── sjtulogo.pdf
-│   │   └── sjtulogo.png
-│   └── sjtubanner.png
-├── sjtuthesis.cfg
-├── sjtuthesis.cls
-├── statement.pdf
-├── submit.pdf
-├── tex
-│   ├── abstract.tex
-│   ├── ack.tex
-│   ├── app_cjk.tex
-│   ├── app_eq.tex
-│   ├── app_log.tex
-│   ├── chapter01.tex
-│   ├── chapter02.tex
-│   ├── chapter03.tex
-│   ├── conclusion.tex
-│   ├── id.tex
-│   ├── patents.tex
-│   ├── projects.tex
-│   ├── pub.tex
-│   └── symbol.tex
-└── thesis.tex
-\end{lstlisting}
-
-本节介绍学位论文模板中木要文件和目录的功能。
-
-\subsubsection{格式控制文件}
-\label{sec:format}
-
-格式控制文件控制着论文的表现形式，包括sjtuthesis.cfg和sjtuthesis.cls。
-其中，“cls”控制论文主体格式，“cfg”为配置文件。
-
-\subsubsection{主控文件thesis.tex}
-\label{sec:thesistex}
-
-主控文件thesis.tex的作用就是将你分散在多个文件中的内容“整合”成一篇完整的论文。
-使用这个模板撰写学位论文时，你的学位论文内容和素材会被“拆散”到各个文件中：
-譬如各章正文、各个附录、各章参考文献等等。
-在thesis.tex中通过“include”命令将论文的各个部分包含进来，从而形成一篇结构完成的论文。
-对模板定制时引入的宏包，建议放在导言区。
-
-\subsubsection{各章源文件tex}
-\label{sec:thesisbody}
-
-这一部分是论文的主体，是以“章”为单位划分的，包括：
-
-\begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt]
-	\item 中英文摘要(abstract.tex)。前言(frontmatter)的其他部分，中英文封面、原创性声明、授权信息在sjtuthesis.cls中定义，不单独分离为tex文件。
-不单独弄成文件。
-	\item 正文(mainmatter)——学位论文正文的各章内容，源文件是chapter\emph{xxx}.tex。
-	\item 附录(app\emph{xx}.tex)、致谢(ack.tex)、攻读学位论文期间发表的学术论文目录(pub.tex)、个人简历(resume.tex)组成正文后的部分(backmatter)。
-参考文献列表由bibtex插入，不作为一个单独的文件。
-\end{itemize}
-
-\subsubsection{图片文件夹figure}
-\label{sec:fig}
-
-figure文件夹放置了需要插入文档中的图片文件(支持PNG/JPG/PDF/EPS格式的图片)，可以在按照章节划分子目录。
-模板文件中使用\verb|\graphicspath|命令定义了图片存储的顶层目录，在插入图片时，顶层目录名“figure”可省略。
-
-\subsubsection{参考文献数据库bib}
-\label{sec:bib}
-
-目前参考文件数据库目录只存放一个参考文件数据库thesis.bib。
-关于参考文献引用，可参考第\ref{chap:example}章中的例子。
-
+\label{intro:interactionsql}
+\subsubsection{英文自然语言的SQL查询语句自动生成}
+\label{intro:enl2sql}
+\subsubsection{中文自然语言的SQL查询语句自动生成}
+\label{intro:cnl2sql}
+\section{研究目标和关键问题}
+\label{intro:targetquestion}
+\subsection{研究目标}
+\label{intro:target}
+\subsection{关键问题}
+\label{intro:question}
+\subsection{解决方案}
+\label{intro:solution}
+\section{论文结构}
+\label{intro:structure}
