--- a/thesis.tex
+++ b/thesis.tex
@@ -66,17 +66,19 @@
 
 % 正文内容
 \include{tex/intro}
-\include{tex/example}
-\include{tex/faq}
+\include{tex/related}
+\include{tex/interaction}
+\include{tex/enl2sql}
+\include{tex/cnl2sql}
 \include{tex/summary}
 
 \appendix % 使用英文字母对附录编号
 
-% 附录内容，本科学位论文可以用翻译的文献替代。
-\include{tex/app_setup}
-\include{tex/app_eq}
-\include{tex/app_cjk}
-\include{tex/app_log}
+% % 附录内容，本科学位论文可以用翻译的文献替代。
+% \include{tex/app_setup}
+% \include{tex/app_eq}
+% \include{tex/app_cjk}
+% \include{tex/app_log}
 
 \backmatter % 文后无编号部分 
 
