--- a/tex/enl2sql.tex
+++ b/tex/enl2sql.tex
@@ -9,5 +9,11 @@
 %% Encoding: UTF-8
 %%==================================================
 
-\chapter{英文自然语言生成SQL查询语句}
+\chapter{基于深度强化学习的NL2SQL生成}
 \label{chap:enl2sql}
+
+\section{研究问题}
+\section{相关技术}
+\section{解决方案}
+\section{实验与分析}
+\section{本章小结}
