--- a/thesis.tex
+++ b/thesis.tex
@@ -66,7 +66,7 @@
 
 % 正文内容
 \include{tex/intro}
-\include{tex/related}
+% \include{tex/related}
 \include{tex/interaction}
 \include{tex/enl2sql}
 \include{tex/cnl2sql}
